2013-03-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Reduce diffs with bibtex8.
	* bibtex-[1-4].c, bibtex.[ch], gblprocs.h, gblvars.h,
	utils.[ch]: Drop unused code and adjust white space.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (btdocdir): Change texmf => texmf-dist.

2012-12-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bibtex-2.c: Drop unused variable (gcc-4.6 warning).

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-10-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c (c8read_csf): DEFAULT_BIBTEX_CSFILE is set to
	"/nonesuch" in ../kpathsea/paths.h; so we use CSF_FILE_ENVVAR.

2012-08-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bibtex.c : Change order of inclusion of headers to avoid warnings.

2012-04-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bibtex-2.c: Do not check whether Glob_Str_Size > Buf_Size,
	and Ent_Str_size > Buf_Size, since Buf_Size can be changed
	dynamically, whereas Glob_Str_Size and Ent_Str_Size are maximum
	values which are constants.

2012-04-10  Norbert Preining  <preining@logic.at>

	* bibtex-2.c: Do not check whether Glob_Str_Size > Buf_Size,
	since the former can be changed dynamically
	* bibtex.h: Adjust BUF_SIZE to the value that matches bibtex.ch

2012-02-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bibtex.c (eoln): Accept both CR and LF as end-of-line.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (DISTCLEANFILES): Add CXXLD.sh.

2011-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* datatype.h (PdsType_T): Do not declare as unsigned.
	* bibtex-3.c (pre_define): Cast xord[] index to UChar_T.
	* utils.c (c8read_csf): Cast name_of_file to 'char *'.
	* bibtex-2.c: A few casts to 'char *'.

2011-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>
